# EDITH-QA

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PROJECT_FILES.md  README.md  SECURITY.md  docker-compose.yml  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  feature_request.md
.github/workflows/: ci.yml  release.yml
bonus_tasks/: wifi_task.json
config/: config.toml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  INSTALLATION.md
edith_core/: executor.py  planner.py  supervisor.py  test_executor.py  test_planner.py  test_verifier.py  verifier.py
examples/: README.md  advanced_testing.py  basic_usage.py  run_all_examples.py
tests/: README.md  conftest.py
tests/unit/: test_planner.py  test_supervisor.py
